inventory to composting request done

--- a/Final_Project/src/userinterface/LabAssistantRole/ProcessWorkRequestJPanel.form
+++ b/Final_Project/src/userinterface/LabAssistantRole/ProcessWorkRequestJPanel.form
@@ -56,10 +56,10 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="txtResult" min="-2" pref="183" max="-2" attributes="0"/>
+                          <Component id="resultComboBox" min="-2" pref="262" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="349" max="32767" attributes="0"/>
+                  <EmptySpace pref="270" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -69,7 +69,7 @@
                   <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtResult" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="resultComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -87,8 +87,6 @@
             <Property name="text" type="java.lang.String" value="Result:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtResult">
-        </Component>
         <Component class="javax.swing.JButton" name="btnSubmitResult">
           <Properties>
             <Property name="text" type="java.lang.String" value="Submit Result"/>
@@ -104,6 +102,19 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBackActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="resultComboBox">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="2">
+                <StringItem index="0" value="Good Food"/>
+                <StringItem index="1" value="Bad Food"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
