--- a/Final_Project/src/userinterface/CompostManagerRole/CompostManagerWorkAreaJPanel.form
+++ b/Final_Project/src/userinterface/CompostManagerRole/CompostManagerWorkAreaJPanel.form
@@ -57,10 +57,12 @@
                   <Component id="btnRefresh" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnBack" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnProcess" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnDaily" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btnBack" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnProcess" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace pref="261" max="32767" attributes="0"/>
           </Group>
