--- a/Final_Project/src/userinterface/AnalysisMode/AnalysisMode.form
+++ b/Final_Project/src/userinterface/AnalysisMode/AnalysisMode.form
@@ -512,6 +512,9 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="View Result"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnResultQuestion4ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -629,6 +632,9 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="View Result"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnResultQuestion5ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -746,6 +752,9 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="View Result"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnResultQuestion6ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
