--- a/Final_Project/src/userinterface/AdministrativeRole/ManageUserAccountJPanel.form
+++ b/Final_Project/src/userinterface/AdministrativeRole/ManageUserAccountJPanel.form
@@ -51,10 +51,10 @@
                                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="roleJComboBox" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
-                                          <Component id="nameJTextField" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
-                                          <Component id="passwordJTextField" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="roleJComboBox" alignment="0" pref="146" max="32767" attributes="0"/>
+                                          <Component id="nameJTextField" alignment="0" pref="146" max="32767" attributes="0"/>
+                                          <Component id="passwordJTextField" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -202,8 +202,6 @@
         <Property name="text" type="java.lang.String" value="Password"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="passwordJTextField">
-    </Component>
     <Component class="javax.swing.JButton" name="createUserJButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Create"/>
@@ -222,6 +220,8 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backjButton1ActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="passwordJTextField">
     </Component>
   </SubComponents>
 </Form>
