process removed from transport work queue

--- a/Final_Project/src/userinterface/TransportManagerRole/ManageWorkQueueJPanel.form
+++ b/Final_Project/src/userinterface/TransportManagerRole/ManageWorkQueueJPanel.form
@@ -26,9 +26,7 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="btnBack" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btnProcess" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnRequest" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -47,7 +45,6 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnBack" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnProcess" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnRequest" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="343" max="32767" attributes="0"/>
@@ -130,14 +127,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBackActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="btnProcess">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Process"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnProcessActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnRequest">
